# Astar-Path-Planning

./: CMakeLists.txt  Configure.txt  LICENSE  README.md  open.py  path_planning.py  test.py  test2.py  testMatrix.py  testMatrix2.py  testUDP  testUDP.cpp  testUDP.py
Astar Path Planning/: main.py
Astar Path Planning/module/: display.py  path_planning.py
data/: Elevation_map.txt  Matrix.txt  Matrix1.txt  Matrix2.txt  gradient_bin.txt  path.txt
inc/: MapIO.h  Path_Planning.h  Traversability_Mapping.h  include.h
src/: MapIO.cpp  Path_Planning.cpp  Traversability_Mapping.cpp  main.cpp
